--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Explore the ultimate PAOK Football Club fan website! Discover stats, shop exclusive merchandise, and browse a vibrant gallery of PAOK, the renowned football club from Thessaloniki, Greece. Celebrate PAOK with us!"
+      content="Explore the ultimate PAOK Football Club fan website! Discover football stats, shop exclusive merchandise, and browse a vibrant gallery of PAOK, the renowned football club from Thessaloniki, Greece."
     />
     <title>PAOK Hub</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
